rbac/rbac/networkPolicy/pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: second
  name: pod
spec:
  containers:
  - image: busybox
    name: pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
