rbac/rbac/networkPolicy/networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-same-namespace
spec:
  podSelector:
    matchLabels:
      app: second
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: first
